--- a/button.html
+++ b/button.html
@@ -1,22 +1,15 @@
 <html>
  <head>
-   <title>Working with HTML Forms</title>
+   <title>Submit Button</title>
  </head>
  <body>
-  <h1>Login Page</h1>
-	<form>
-    <label for="username">
-      Username: 
-      <input type="text" id="username" name="username">
-    </label>
-
-    <label for="firstName">First Name:</label>
+   <form>
+     <label for="firstName">First Name:</label>
      <input type="text" name="firstName" id="firstName">
      <label for="lastName">Last Name:</label>
      <input type="text" name="lastName" id="lastName">
      <!-- This button will submit the form, causing page to redirect -->
      <button type="submit">Submit Name</button>
-     
-  </form>
+   </form>
  </body>
 </html>
